--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 # Server port is arbitrary
 server.port=8082
-
 # Data Source Setup
-# Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
-#       and provide the credentials below to access it
+# server name and port of the MySQl server is set with env variable
+spring.datasource.url=jdbc:mysql://${sql-url}/critter
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=update
+# use the default user root (don't do this in production)
+spring.datasource.username=root
+spring.datasource.password=admin#01
 
 # uncomment the below lines to view sql output in console
 #spring.jpa.show-sql=true
