--- a/starter/critter/pom.xml
+++ b/starter/critter/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
+		<version>2.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.udacity.jdnd.course3</groupId>
 	<artifactId>critter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>critter</name>
-	<description>Starter code for Critter Chronologer project</description>
+	<description>Starter code for Critter Chronologger project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -54,6 +54,10 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
